Imágenes agregadas al 100%

--- a/diseno-web.html
+++ b/diseno-web.html
@@ -200,20 +200,7 @@
 			<div id="welcome" class="rev_slider fullscreenbanner" style="display:none;" data-version="5.4.5.2">
                 <ul>
                     <li data-index="rs-240" data-transition="fade" data-slotamount="default" data-hideafterloop="0" data-hideslideonmobile="off"  data-easein="Power4.easeInOut" data-easeout="Power4.easeInOut" data-masterspeed="1000"  data-rotate="0"  data-saveperformance="off"  data-title="Slide" data-param1="" data-param2="" data-param3="" data-param4="" data-param5="" data-param6="" data-param7="" data-param8="" data-param9="" data-param10="" data-description="">
-                        <img src="images/slider/hello-world.jpg"  alt=""  data-bgposition="center center" data-bgfit="cover" data-bgparallax="4" class="rev-slidebg" data-no-retina>
-                        <div class="rs-background-video-layer"
-                            data-forcerewind="on"
-                            data-volume="mute"
-                            data-videowidth="100%"
-                            data-videoheight="100%"
-                            data-videomp4="images/slider/hello-world.mp4"
-                            data-videopreload="auto"
-                            data-videoloop="loop"
-                            data-forceCover="1"
-                            data-aspectratio="16:9"
-                            data-autoplay="true"
-                            data-autoplayonlyfirsttime="false">
-                        </div>
+                        <img src="images/servicios/WEB/slider.jpg"  alt=""  data-bgposition="center center" data-bgfit="cover" data-bgparallax="4" class="rev-slidebg" data-no-retina>
                         <div class="tp-caption tp-shape tp-shapewrapper"
                             id="slide-240-layer-7"
                             data-x="['center','center','center','center']" 
@@ -234,7 +221,7 @@
                             data-paddingbottom="[0,0,0,0]"
                             data-paddingleft="[0,0,0,0]"
                             data-blendmode="hard-light"
-                            style="z-index: 5;font-family:Open Sans;background:linear-gradient(90deg, rgba(41,112,255,0.75) 0%, rgba(46,216,163,0.75) 100%);"> 
+                            style="z-index: 5;font-family:Poppins;background:linear-gradient(90deg, rgba(41,112,255,0.75) 0%, rgba(46,216,163,0.75) 100%);"> 
                         </div>
                         <div class="tp-caption tp-resizeme" 
                             id="slide-1-layer-15" 
@@ -254,7 +241,7 @@
                             data-paddingbottom="[0,0,0,0]"
                             data-paddingleft="[0,0,0,0]"
                             style="z-index: 8;">
-                            <img src="images/slider/web.png" alt="" data-ww="['800px','800px','800px','800px']" data-hh="['300px','300px','300px','300px']" data-no-retina>
+                            <img src="images/slider/web.png" alt="" data-ww="['700px','700px','700px','700px']" data-hh="['300px','300px','300px','300px']" data-no-retina>
                         </div>
                         <div class="tp-caption"
                             id="slide-240-layer-2"
@@ -276,7 +263,7 @@
                             data-paddingright="[0,0,0,0]"
                             data-paddingbottom="[0,0,0,0]"
                             data-paddingleft="[0,0,0,0]"
-                            style="z-index: 8; min-width: 640px; max-width: 640px; white-space: normal; font-size: 26px; line-height: 35px; font-weight: 300; color: #ffffff; letter-spacing: px;font-family:Open Sans;">
+                            style="z-index: 8; min-width: 640px; max-width: 640px; white-space: normal; font-size: 26px; line-height: 35px; font-weight: 300; color: #ffffff; letter-spacing: px;font-family:Poppins;">
                             Say Hello to the new web presence of your internet company. Usable, Customizable and Beautiful!
                         </div>
                         <div class="tp-caption rev-btn tc-btnshadow tp-rs-menulink btn-verde button button-3d button-reveal button-xlarge tright button-rounded" 
@@ -295,7 +282,7 @@
                             data-responsive="off"
                             data-frames='[{"delay":1000,"speed":1500,"frame":"0","from":"y:50px;opacity:0;","to":"o:1;","ease":"Power4.easeOut"},{"delay":"wait","speed":300,"frame":"999","to":"opacity:0;","ease":"Power3.easeInOut"},{"frame":"hover","speed":"150","ease":"Power1.easeInOut","to":"o:1;rX:0;rY:0;rZ:0;z:0;","style":"c:rgba(255,255,255,1);bg:rgb(41,194,146);"}]'
                             data-textAlign="['inherit','inherit','inherit','inherit']"
-                            style="z-index: 10; white-space: nowrap; font-size: 17px; line-height: 50px; font-weight: 600; color: rgba(255,255,255,1); font-family:Open Sans;background-color:rgb(46,216,163);border-radius:3px 3px 3px 3px;outline:none;box-sizing:border-box;-moz-box-sizing:border-box;-webkit-box-sizing:border-box;cursor:pointer;text-decoration: none;">
+                            style="z-index: 10; white-space: nowrap; font-size: 17px; line-height: 50px; font-weight: 600; color: rgba(255,255,255,1); font-family:Poppins;background-color:rgb(46,216,163);border-radius:3px 3px 3px 3px;outline:none;box-sizing:border-box;-moz-box-sizing:border-box;-webkit-box-sizing:border-box;cursor:pointer;text-decoration: none;">
                             <i class="icon-line-arrow-right"></i>
                             <span>Contáctanos</span>
                         </div>
@@ -322,7 +309,7 @@
                             data-paddingright="[5,5,5,5]"
                             data-paddingbottom="[5,5,5,5]"
                             data-paddingleft="[5,5,5,5]"
-                            style="z-index: 11; min-width: 50px; max-width: 50px; max-width: 50px; max-width: 50px; color: #ffffff;font-family:Open Sans;border-color:rgb(255,255,255);border-style:solid;border-width:2px 2px 2px 2px;border-radius:40px 40px 40px 40px;cursor:pointer;">
+                            style="z-index: 11; min-width: 50px; max-width: 50px; max-width: 50px; max-width: 50px; color: #ffffff;font-family:Poppins;border-color:rgb(255,255,255);border-style:solid;border-width:2px 2px 2px 2px;border-radius:40px 40px 40px 40px;cursor:pointer;">
                         </div>
                     </li>
                 </ul>
@@ -348,8 +335,8 @@
         <div class="container clearfix">
             <div id="section-nextgen" class="page-section bottommargin-lg topmargin">
                 <div class="row clearfix">
-                    <div class="col-lg-5 center">
-                        <img src="images/iphone-watch.png" alt="NextGen Framework" data-animate="fadeInLeft">
+                    <div class="col-lg-5">
+                        <img src="images/servicios/WEB/1.png" alt="NextGen Framework" data-animate="fadeInLeft">
                     </div>
                     <div class="col-lg-7">
                         <div class="topmargin-lg d-none d-lg-block"></div>
@@ -380,12 +367,12 @@
                         </a>
                     </div>
                     <div class="col-lg-5 center">
-                        <img src="images/iphone-nexus.png" alt="Stunning Graphics" data-animate="fadeInRight">
+                        <img src="images/servicios/WEB/2.png" alt="Stunning Graphics" data-animate="fadeInRight">
                     </div>
                 </div>
             </div>
         </div>
-        <div id="section-secured-solutions" class="nomargin page-section section nopadding topmargin-sm" style="background: url(images/3.jpg) left bottom / 100% no-repeat; height: 700px;" data-height-xl="700" data-height-lg="700" data-height-md="450" data-height-sm="450" data-height-xs="450">
+        <div class="nomargin page-section section nopadding topmargin-sm" style="background: url(images/3.jpg) left bottom / 100% no-repeat; height: 700px;" data-height-xl="700" data-height-lg="700" data-height-md="450" data-height-sm="450" data-height-xs="450">
             <div class="container clearfix">
                 <div class="row clearfix">
                     <div class="col-lg-7 offset-lg-5">
@@ -403,57 +390,9 @@
                 </div>
             </div>
             <div class="video-wrap" style="position: absolute; height: 100%; z-index: 1;">
-                <div class="video-overlay d-none d-lg-block fadeInLeft animated" style="background: url('images/iphone-3d.png') no-repeat left top; background-size: auto 100%;" data-animate="fadeInLeft"></div>
+                <div class="video-overlay d-none d-lg-block fadeInLeft animated" style="background: url('images/servicios/web/3.png') no-repeat left top; background-size: auto 100%;" data-animate="fadeInLeft"></div>
             </div>
         </div>
-        <!-- <div class="section noborder nomargin">
-            <div class="container">
-                <div class="heading-block center">
-                    <h2>¿Tienes dudas? mira las Preguntas Frecuentes</h2>
-                </div>
-                <div class="clear"></div>
-                <div id="faqs" class="faqs topmargin">
-                    <div class="row">
-                        <div class="col-lg-6">
-                            <div class="toggle faq">
-                                <div class="togglet texto-verde">
-                                    <i class="toggle-closed icon-question-sign texto-verde"></i>
-                                    <i class="toggle-open icon-question-sign texto-verde"></i>
-                                    <span class="texto-azul">¿Cuanto tiempo tardan las páginas web en realizarse?
-                                </div>
-                                <div class="togglec" style="font-size: 16px !important; font-weight: 300;">Esto dependerá de los requerimientos de cada cliente, teniendo en cuenta dificultad o facilidad del sitio web ideal para cada uno.</div>
-                            </div>
-                            <div class="toggle faq">
-                                <div class="togglet texto-azul">
-                                    <i class="toggle-closed icon-comments-alt texto-verde"></i>
-                                    <i class="toggle-open icon-comments-alt texto-verde"></i>
-                                    ¿Qué necesito para tener una página web?
-                                </div>
-                                <div class="togglec" style="font-size: 16px !important; font-weight: 300;">Lo primero que necesitas es tener una idea digital, luego buscar expertos como nosotros que lleven a cabo tu idea.</div>
-                            </div>
-                        </div>
-                        <div class="col-lg-6">
-                            <div class="toggle faq">
-                                <div class="togglet texto-azul">
-                                    <i class="toggle-closed icon-picture texto-verde"></i>
-                                    <i class="toggle-open icon-picture texto-verde"></i>
-                                    ¿Por qué debo optimizar mi sitio web?
-                                </div>
-                                <div class="togglec" style="font-size: 16px !important; font-weight: 300;">Lo más importante de un sitio web es la visibilidad y satisfacción de los usuarios/clientes, es por esto que tu sitio web debe estar optimizado para así ganar prestigio.</div>
-                            </div>
-                            <div class="toggle faq">
-                                <div class="togglet texto-azul">
-                                    <i class="toggle-closed icon-smile1 texto-verde"></i>
-                                    <i class="toggle-open icon-smile1 texto-verde"></i>
-                                    ¿Como realizan los logotipos?
-                                </div>
-                                <div class="togglec" style="font-size: 16px !important; font-weight: 300;">Realizamos bocetos e ilustraciones para encontrar el ADN de tu negocio convirtiéndolo en un formato digital que represente la identidad deseada.</div>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div> -->
     </section>
     <footer id="footer" class="bg-azul">
         <div class="container">
