--- a/us/diseno-web.html
+++ b/us/diseno-web.html
@@ -110,10 +110,10 @@
                 </div>
                 <div id="logo">
                     <a href="index.html" class="standard-logo" data-sticky-logo="../images/logos/logo.png">
-                        <img style="margin-right:50px" src="../images/logos/logoblanco.png" alt="CreativosPlus">
+                        <img style="margin-right:100px" src="../images/logos/logoblanco.png" alt="CreativosPlus">
                     </a>
                     <a href="index.html" class="retina-logo" data-sticky-logo="images/logos/logo.png">
-                        <img style="margin-right:50px" src="../images/logos/logoblanco.png" alt="CreativosPlus">
+                        <img style="margin-right:100px" src="../images/logos/logoblanco.png" alt="CreativosPlus">
                     </a>
                 </div>
                 <nav id="primary-menu" class="with-arrows clearfix not-dark">
@@ -200,20 +200,7 @@
 			<div id="welcome" class="rev_slider fullscreenbanner" style="display:none;" data-version="5.4.5.2">
                 <ul>
                     <li data-index="rs-240" data-transition="fade" data-slotamount="default" data-hideafterloop="0" data-hideslideonmobile="off"  data-easein="Power4.easeInOut" data-easeout="Power4.easeInOut" data-masterspeed="1000"  data-rotate="0"  data-saveperformance="off"  data-title="Slide" data-param1="" data-param2="" data-param3="" data-param4="" data-param5="" data-param6="" data-param7="" data-param8="" data-param9="" data-param10="" data-description="">
-                        <img src="../images/slider/hello-world.jpg"  alt=""  data-bgposition="center center" data-bgfit="cover" data-bgparallax="4" class="rev-slidebg" data-no-retina>
-                        <div class="rs-background-video-layer"
-                            data-forcerewind="on"
-                            data-volume="mute"
-                            data-videowidth="100%"
-                            data-videoheight="100%"
-                            data-videomp4="../images/slider/hello-world.mp4"
-                            data-videopreload="auto"
-                            data-videoloop="loop"
-                            data-forceCover="1"
-                            data-aspectratio="16:9"
-                            data-autoplay="true"
-                            data-autoplayonlyfirsttime="false">
-                        </div>
+                        <img src="../images/servicios/WEB/slider.jpg"  alt=""  data-bgposition="center center" data-bgfit="cover" data-bgparallax="4" class="rev-slidebg" data-no-retina>
                         <div class="tp-caption tp-shape tp-shapewrapper"
                             id="slide-240-layer-7"
                             data-x="['center','center','center','center']" 
@@ -234,14 +221,14 @@
                             data-paddingbottom="[0,0,0,0]"
                             data-paddingleft="[0,0,0,0]"
                             data-blendmode="hard-light"
-                            style="z-index: 5;font-family:Open Sans;background:linear-gradient(90deg, rgba(41,112,255,0.75) 0%, rgba(46,216,163,0.75) 100%);"> 
+                            style="z-index: 5;font-family:Poppins;background:linear-gradient(90deg, rgba(41,112,255,0.75) 0%, rgba(46,216,163,0.75) 100%);"> 
                         </div>
                         <div class="tp-caption tp-resizeme" 
                             id="slide-1-layer-15" 
                             data-x="['left','left','left','left']" 
-                            data-hoffset="['-60','-60','-60','-60']" 
+                            data-hoffset="['-20','-20','-20','-20']" 
                             data-y="['top','top','top','top']" 
-                            data-voffset="['220','220','220','220']" 
+                            data-voffset="['300','300','300','300']" 
                             data-width="none"
                             data-height="none"
                             data-whitespace="nowrap"
@@ -254,7 +241,7 @@
                             data-paddingbottom="[0,0,0,0]"
                             data-paddingleft="[0,0,0,0]"
                             style="z-index: 8;">
-                            <img src="../images/slider/web.png" alt="" data-ww="['800px','800px','800px','800px']" data-hh="['300px','300px','300px','300px']" data-no-retina>
+                            <img src="../images/slider/web-design.png" alt="" data-ww="['700px','700px','700px','700px']" data-hh="['150px','150px','150px','150px']" data-no-retina>
                         </div>
                         <div class="tp-caption"
                             id="slide-240-layer-2"
@@ -276,7 +263,7 @@
                             data-paddingright="[0,0,0,0]"
                             data-paddingbottom="[0,0,0,0]"
                             data-paddingleft="[0,0,0,0]"
-                            style="z-index: 8; min-width: 640px; max-width: 640px; white-space: normal; font-size: 26px; line-height: 35px; font-weight: 300; color: #ffffff; letter-spacing: px;font-family:Open Sans;">
+                            style="z-index: 8; min-width: 640px; max-width: 640px; white-space: normal; font-size: 26px; line-height: 35px; font-weight: 300; color: #ffffff; letter-spacing: px;font-family:Poppins;">
                             Say Hello to the new web presence of your internet company. Usable, Customizable and Beautiful!
                         </div>
                         <div class="tp-caption rev-btn tc-btnshadow tp-rs-menulink btn-verde button button-3d button-reveal button-xlarge tright button-rounded" 
@@ -295,7 +282,7 @@
                             data-responsive="off"
                             data-frames='[{"delay":1000,"speed":1500,"frame":"0","from":"y:50px;opacity:0;","to":"o:1;","ease":"Power4.easeOut"},{"delay":"wait","speed":300,"frame":"999","to":"opacity:0;","ease":"Power3.easeInOut"},{"frame":"hover","speed":"150","ease":"Power1.easeInOut","to":"o:1;rX:0;rY:0;rZ:0;z:0;","style":"c:rgba(255,255,255,1);bg:rgb(41,194,146);"}]'
                             data-textAlign="['inherit','inherit','inherit','inherit']"
-                            style="z-index: 10; white-space: nowrap; font-size: 17px; line-height: 50px; font-weight: 600; color: rgba(255,255,255,1); font-family:Open Sans;background-color:rgb(46,216,163);border-radius:3px 3px 3px 3px;outline:none;box-sizing:border-box;-moz-box-sizing:border-box;-webkit-box-sizing:border-box;cursor:pointer;text-decoration: none;">
+                            style="z-index: 10; white-space: nowrap; font-size: 17px; line-height: 50px; font-weight: 600; color: rgba(255,255,255,1); font-family:Poppins;background-color:rgb(46,216,163);border-radius:3px 3px 3px 3px;outline:none;box-sizing:border-box;-moz-box-sizing:border-box;-webkit-box-sizing:border-box;cursor:pointer;text-decoration: none;">
                             <i class="icon-line-arrow-right"></i>
                             <span>Contact Us</span>
                         </div>
@@ -322,7 +309,7 @@
                             data-paddingright="[5,5,5,5]"
                             data-paddingbottom="[5,5,5,5]"
                             data-paddingleft="[5,5,5,5]"
-                            style="z-index: 11; min-width: 50px; max-width: 50px; max-width: 50px; max-width: 50px; color: #ffffff;font-family:Open Sans;border-color:rgb(255,255,255);border-style:solid;border-width:2px 2px 2px 2px;border-radius:40px 40px 40px 40px;cursor:pointer;">
+                            style="z-index: 11; min-width: 50px; max-width: 50px; max-width: 50px; max-width: 50px; color: #ffffff;font-family:Poppins;border-color:rgb(255,255,255);border-style:solid;border-width:2px 2px 2px 2px;border-radius:40px 40px 40px 40px;cursor:pointer;">
                         </div>
                     </li>
                 </ul>
@@ -349,7 +336,7 @@
             <div id="section-nextgen" class="page-section bottommargin-lg topmargin">
                 <div class="row clearfix">
                     <div class="col-lg-5 center">
-                        <img src="../images/iphone-watch.png" alt="NextGen Framework" data-animate="fadeInLeft">
+                        <img src="../images/servicios/WEB/4.png" alt="NextGen Framework" data-animate="fadeInLeft">
                     </div>
                     <div class="col-lg-7">
                         <div class="topmargin-lg d-none d-lg-block"></div>
@@ -380,7 +367,7 @@
                         </a>
                     </div>
                     <div class="col-lg-5 center">
-                        <img src="../images/iphone-nexus.png" alt="phone" data-animate="fadeInRight">
+                        <img src="../images/servicios/WEB/2.png" alt="phone" data-animate="fadeInRight">
                     </div>
                 </div>
             </div>
@@ -403,7 +390,7 @@
                 </div>
             </div>
             <div class="video-wrap" style="position: absolute; height: 100%; z-index: 1;">
-                <div class="video-overlay d-none d-lg-block fadeInLeft animated" style="background: url('../images/iphone-3d.png') no-repeat left top; background-size: auto 100%;" data-animate="fadeInLeft"></div>
+                <div class="video-overlay d-none d-lg-block fadeInLeft animated" style="background: url('../images/servicios/WEB/3.png') no-repeat left top; background-size: auto 100%;" data-animate="fadeInLeft"></div>
             </div>
         </div>
     </section>
