--- a/index.html
+++ b/index.html
@@ -264,7 +264,7 @@
                             data-voffset="['50','40','0','-60']"
                             data-fontsize="['26','23','20','17']"
                             data-lineheight="['35','30','25','22']"
-                            data-width="['640','481','320','260']"
+                            data-width="['740','481','320','260']"
                             data-height="none"
                             data-whitespace="normal"
                             data-type="text"
@@ -276,8 +276,8 @@
                             data-paddingright="[0,0,0,0]"
                             data-paddingbottom="[0,0,0,0]"
                             data-paddingleft="[0,0,0,0]"
-                            style="z-index: 8; min-width: 640px; max-width: 640px; white-space: normal; font-size: 26px; line-height: 35px; font-weight: 300; color: #ffffff; letter-spacing: px;font-family:Open Sans;">
-                            Say Hello to the new web presence of your internet company. Usable, Customizable and Beautiful!
+                            style="z-index: 8; min-width: 640px; max-width: 640px; white-space: normal; font-size: 26px; line-height: 35px; font-weight: 300; color: #ffffff; letter-spacing: px;font-family:Poppins;">
+                            Tu mejor opcion para hacer de tu idea una realidad.
                         </div>
                         <div class="tp-caption rev-btn tc-btnshadow tp-rs-menulink btn-verde button button-3d button-reveal button-xlarge tright button-rounded" 
                             target="_self"			 
