--- a/us/nosotros.html
+++ b/us/nosotros.html
@@ -113,10 +113,10 @@
               </div>
               <div id="logo">
                   <a href="index.html" class="standard-logo" data-sticky-logo="../images/logos/logo.png">
-                      <img style="margin-right:50px" src="../images/logos/logoblanco.png" alt="CreativosPlus">
+                     <img style="margin-right:100px" src="../images/logos/logoblanco.png" alt="CreativosPlus">
                   </a>
                   <a href="index.html" class="retina-logo" data-sticky-logo="images/logos/logo.png">
-                      <img style="margin-right:50px" src="../images/logos/logoblanco.png" alt="CreativosPlus">
+                     <img style="margin-right:100px" src="../images/logos/logoblanco.png" alt="CreativosPlus">
                   </a>
               </div>
               <nav id="primary-menu" class="with-arrows clearfix not-dark">
@@ -237,14 +237,14 @@
                            data-paddingbottom="[0,0,0,0]"
                            data-paddingleft="[0,0,0,0]"
                            data-blendmode="hard-light"
-                           style="z-index: 5;font-family:Open Sans;background:linear-gradient(90deg, rgba(41,112,255,0.75) 0%, rgba(46,216,163,0.75) 100%);"> 
+                           style="z-index: 5;font-family:Poppins;background:linear-gradient(90deg, rgba(41,112,255,0.75) 0%, rgba(46,216,163,0.75) 100%);"> 
                         </div>
                         <div class="tp-caption tp-resizeme" 
                             id="slide-1-layer-15" 
                             data-x="['left','left','left','left']" 
-                            data-hoffset="['-60','-60','-60','-60']" 
+                            data-hoffset="['-20','-20','-20','-20']" 
                             data-y="['top','top','top','top']" 
-                            data-voffset="['220','220','220','220']" 
+                            data-voffset="['300','300','300','300']" 
                             data-width="none"
                             data-height="none"
                             data-whitespace="nowrap"
@@ -257,7 +257,7 @@
                             data-paddingbottom="[0,0,0,0]"
                             data-paddingleft="[0,0,0,0]"
                             style="z-index: 8;">
-                            <img src="../images/slider/quienes-somos.png" alt="" data-ww="['900px','900px','900px','900px']" data-hh="['300px','300px','300px','300px']" data-no-retina>
+                            <img src="../images/slider/about-us.png" alt="" data-ww="['600px','600px','600px','600px']" data-hh="['150px','150px','150px','150px']" data-no-retina>
                         </div>
                         <div class="tp-caption"
                            id="slide-240-layer-2"
@@ -279,7 +279,7 @@
                            data-paddingright="[0,0,0,0]"
                            data-paddingbottom="[0,0,0,0]"
                            data-paddingleft="[0,0,0,0]"
-                           style="z-index: 8; min-width: 640px; max-width: 640px; white-space: normal; font-size: 26px; line-height: 35px; font-weight: 300; color: #ffffff; letter-spacing: px;font-family:Open Sans;">
+                           style="z-index: 8; min-width: 640px; max-width: 640px; white-space: normal; font-size: 26px; line-height: 35px; font-weight: 300; color: #ffffff; letter-spacing: px;font-family:Poppins;">
                            Say Hello to the new web presence of your internet company. Usable, Customizable and Beautiful! 
                         </div>
                         <div class="tp-caption rev-btn tc-btnshadow tp-rs-menulink btn-verde button button-3d button-reveal button-xlarge tright button-rounded" 
@@ -298,7 +298,7 @@
                            data-responsive="off"
                            data-frames='[{"delay":1000,"speed":1500,"frame":"0","from":"y:50px;opacity:0;","to":"o:1;","ease":"Power4.easeOut"},{"delay":"wait","speed":300,"frame":"999","to":"opacity:0;","ease":"Power3.easeInOut"},{"frame":"hover","speed":"150","ease":"Power1.easeInOut","to":"o:1;rX:0;rY:0;rZ:0;z:0;","style":"c:rgba(255,255,255,1);bg:rgb(41,194,146);"}]'
                            data-textAlign="['inherit','inherit','inherit','inherit']"
-                           style="z-index: 10; white-space: nowrap; font-size: 17px; line-height: 50px; font-weight: 600; color: rgba(255,255,255,1); font-family:Open Sans;background-color:rgb(46,216,163);border-radius:3px 3px 3px 3px;outline:none;box-sizing:border-box;-moz-box-sizing:border-box;-webkit-box-sizing:border-box;cursor:pointer;text-decoration: none;">
+                           style="z-index: 10; white-space: nowrap; font-size: 17px; line-height: 50px; font-weight: 600; color: rgba(255,255,255,1); font-family:Poppins;background-color:rgb(46,216,163);border-radius:3px 3px 3px 3px;outline:none;box-sizing:border-box;-moz-box-sizing:border-box;-webkit-box-sizing:border-box;cursor:pointer;text-decoration: none;">
                            <i class="icon-line-arrow-right"></i>
                            <span>Contact Us</span>
                         </div>
@@ -325,7 +325,7 @@
                            data-paddingright="[5,5,5,5]"
                            data-paddingbottom="[5,5,5,5]"
                            data-paddingleft="[5,5,5,5]"
-                           style="z-index: 11; min-width: 50px; max-width: 50px; max-width: 50px; max-width: 50px; color: #ffffff;font-family:Open Sans;border-color:rgb(255,255,255);border-style:solid;border-width:2px 2px 2px 2px;border-radius:40px 40px 40px 40px;cursor:pointer;">
+                           style="z-index: 11; min-width: 50px; max-width: 50px; max-width: 50px; max-width: 50px; color: #ffffff;font-family:Poppins;border-color:rgb(255,255,255);border-style:solid;border-width:2px 2px 2px 2px;border-radius:40px 40px 40px 40px;cursor:pointer;">
                         </div>
                     </li>
                 </ul>
