--- a/diseno-web.html
+++ b/diseno-web.html
@@ -226,9 +226,9 @@
                         <div class="tp-caption tp-resizeme" 
                             id="slide-1-layer-15" 
                             data-x="['left','left','left','left']" 
-                            data-hoffset="['-60','-60','-60','-60']" 
+                            data-hoffset="['-30','-30','-30','-30']" 
                             data-y="['top','top','top','top']" 
-                            data-voffset="['220','220','220','220']" 
+                            data-voffset="['300','300','300','300']" 
                             data-width="none"
                             data-height="none"
                             data-whitespace="nowrap"
@@ -241,7 +241,7 @@
                             data-paddingbottom="[0,0,0,0]"
                             data-paddingleft="[0,0,0,0]"
                             style="z-index: 8;">
-                            <img src="images/slider/web.png" alt="" data-ww="['700px','700px','700px','700px']" data-hh="['300px','300px','300px','300px']" data-no-retina>
+                            <img src="images/slider/DISEÑO WEB.png" alt="" data-ww="['700px','700px','700px','700px']" data-hh="['150px','150px','150px','150px']" data-no-retina>
                         </div>
                         <div class="tp-caption"
                             id="slide-240-layer-2"
