--- a/diseno-grafico.html
+++ b/diseno-grafico.html
@@ -390,7 +390,7 @@
                 </div>
             </div>
             <div class="video-wrap" style="position: absolute; height: 100%; z-index: 1;">
-                <div class="video-overlay d-none d-lg-block fadeInLeft animated" style="background: url('images/servicios/diseño/3.png') no-repeat left top; background-size: auto 100%;" data-animate="fadeInLeft"></div>
+                <div class="video-overlay d-none d-lg-block fadeInLeft animated" style="background: url('images/servicios/diseño/3-3.png') no-repeat left top; background-size: auto 100%;" data-animate="fadeInLeft"></div>
             </div>
         </div>
     </section>
