Agregados cambios responsive diseño web

--- a/diseno-web.html
+++ b/diseno-web.html
@@ -105,16 +105,16 @@
     <header id="header" class="split-menu transparent-header">
         <div id="header-wrap">
             <div class="container clearfix">
-                <div id="primary-menu-trigger">
-                    <i class="icon-reorder"></i>
-                </div>
                 <div id="logo">
                     <a href="index.html" class="standard-logo" data-sticky-logo="images/logos/logo.png">
                         <img style="margin-right:50px" src="images/logos/logoblanco.png" alt="CreativosPlus">
                     </a>
-                    <a href="index.html" class="retina-logo" data-sticky-logo="images/logos/logo.png">
-                        <img style="margin-right:50px" src="images/logos/logoblanco.png" alt="CreativosPlus">
+                    <a href="index.html" class="retina-logo" data-sticky-logo="images/logos/home.png">
+                        <img src="images/logos/home.png" alt="CreativosPlus">
                     </a>
+                </div>
+                <div id="primary-menu-trigger">
+                    <i class="icon-plus texto-verde" style="font-size: 35px"></i>
                 </div>
                 <nav id="primary-menu" class="with-arrows clearfix not-dark">
                     <ul class="one-page-menu" data-easing="easeInOutExpo" data-speed="1250" data-offset="160">
@@ -226,9 +226,9 @@
                         <div class="tp-caption tp-resizeme" 
                             id="slide-1-layer-15" 
                             data-x="['left','left','left','left']" 
-                            data-hoffset="['-30','-30','-30','-30']" 
+                            data-hoffset="['-30','-30','-30','15']" 
                             data-y="['top','top','top','top']" 
-                            data-voffset="['300','300','300','300']" 
+                            data-voffset="['300','300','300','150']" 
                             data-width="none"
                             data-height="none"
                             data-whitespace="nowrap"
@@ -241,14 +241,14 @@
                             data-paddingbottom="[0,0,0,0]"
                             data-paddingleft="[0,0,0,0]"
                             style="z-index: 8;">
-                            <img src="images/slider/DISEÑO WEB.png" alt="" data-ww="['700px','700px','700px','700px']" data-hh="['150px','150px','150px','150px']" data-no-retina>
+                            <img src="images/slider/DISEÑO WEB.png" alt="" data-ww="['700px','700px','700px','450px']" data-hh="['150px','150px','150px','115px']" data-no-retina>
                         </div>
                         <div class="tp-caption"
                             id="slide-240-layer-2"
                             data-x="['left','left','left','left']" 
                             data-hoffset="['120','120','100','80']"
                             data-y="['middle','middle','middle','middle']" 
-                            data-voffset="['50','40','0','-60']"
+                            data-voffset="['50','40','0','-30']"
                             data-fontsize="['26','23','20','17']"
                             data-lineheight="['35','30','25','22']"
                             data-width="['640','481','320','260']"
@@ -266,7 +266,7 @@
                             style="z-index: 8; min-width: 640px; max-width: 640px; white-space: normal; font-size: 26px; line-height: 35px; font-weight: 300; color: #ffffff; letter-spacing: px;font-family:Poppins;">
                             Say Hello to the new web presence of your internet company. Usable, Customizable and Beautiful!
                         </div>
-                        <div class="tp-caption rev-btn tc-btnshadow tp-rs-menulink btn-verde button button-3d button-reveal button-xlarge tright button-rounded" 
+                        <div class="tp-caption rev-btn tc-btnshadow tp-rs-menulink btn-verde button button-3d button-reveal button-xlarge tright button-rounded d-none d-lg-block" 
                             target="_self"			 
                             id="slide-1-layer-12" 
                             data-x="['left','left','left','left']" 
