--- a/index.html
+++ b/index.html
@@ -106,14 +106,14 @@
         <div id="header-wrap">
             <div class="container clearfix">
                 <div id="primary-menu-trigger">
-                    <i class="icon-reorder"></i>
+                    <i class="icon-plus texto-verde" style="font-size: 25px"></i>
                 </div>
                 <div id="logo">
                     <a href="index.html" class="standard-logo" data-sticky-logo="images/logos/logo.png">
                         <img style="margin-right:50px" src="images/logos/logoblanco.png" alt="CreativosPlus">
                     </a>
-                    <a href="index.html" class="retina-logo" data-sticky-logo="images/logos/logo.png">
-                        <img style="margin-right:50px" src="images/logos/logoblanco.png" alt="CreativosPlus">
+                    <a href="index.html" class="retina-logo" data-sticky-logo="images/logos/home.png">
+                        <img src="images/logos/home.png" alt="CreativosPlus">
                     </a>
                 </div>
                 <nav id="primary-menu" class="with-arrows clearfix not-dark">
@@ -239,9 +239,9 @@
                         <div class="tp-caption tp-resizeme" 
                             id="slide-1-layer-15" 
                             data-x="['left','left','left','left']" 
-                            data-hoffset="['-60','-60','-60','-60']" 
+                            data-hoffset="['-60','-60','-60','-10']" 
                             data-y="['top','top','top','top']" 
-                            data-voffset="['220','220','220','220']" 
+                            data-voffset="['220','220','220','150']" 
                             data-width="none"
                             data-height="none"
                             data-whitespace="nowrap"
@@ -254,14 +254,14 @@
                             data-paddingbottom="[0,0,0,0]"
                             data-paddingleft="[0,0,0,0]"
                             style="z-index: 8;">
-                            <img src="images/logos/logoblanco.png" alt="" data-ww="['800px','800px','800px','800px']" data-hh="['300px','300px','300px','300px']" data-no-retina>
+                            <img src="images/logos/logoblanco.png" alt="" data-ww="['800px','800px','800px','450px']" data-hh="['300px','300px','300px','170px']" data-no-retina>
                         </div>
                         <div class="tp-caption"
                             id="slide-240-layer-2"
                             data-x="['left','left','left','left']" 
                             data-hoffset="['120','120','100','80']"
                             data-y="['middle','middle','middle','middle']" 
-                            data-voffset="['50','40','0','-60']"
+                            data-voffset="['50','40','0','-40']"
                             data-fontsize="['26','23','20','17']"
                             data-lineheight="['35','30','25','22']"
                             data-width="['740','481','320','260']"
@@ -279,7 +279,7 @@
                             style="z-index: 8; min-width: 640px; max-width: 640px; white-space: normal; font-size: 26px; line-height: 35px; font-weight: 300; color: #ffffff; letter-spacing: px;font-family:Poppins;">
                             Tu mejor opcion para hacer de tu idea una realidad.
                         </div>
-                        <div class="tp-caption rev-btn tc-btnshadow tp-rs-menulink btn-verde button button-3d button-reveal button-xlarge tright button-rounded" 
+                        <div class="d-none d-sm-block tp-caption rev-btn tc-btnshadow tp-rs-menulink btn-verde button button-3d button-reveal button-xlarge tright button-rounded" 
                             target="_self"			 
                             id="slide-1-layer-12" 
                             data-x="['left','left','left','left']" 
@@ -348,7 +348,7 @@
         <div class="section nomargin noborder" id="heading-block-1" style="background: url('images/3.jpg') no-repeat top center; background-size: cover; padding: 80px 0 70px;">
             <div class="container clearfix">
                 <div class="row clearfix" style="margin-bottom: 50px">
-                    <div class="col-lg-7">
+                    <div class="col-lg-7 col-sm-12">
                         <div class="heading-block topmargin" style="margin-bottom: 0 !important;">
                             <h2>Encontrar tu identidad Digital, nunca fue tan fácil</h2>
                         </div>
@@ -358,7 +358,7 @@
                             <span>Nosotros</span>
                         </a>
                     </div>
-                    <div class="col-lg-5">
+                    <div class="col-lg-5 d-none d-sm-block">
                         <img src="images/logos/home.png" data-animate="fadeInRight" data-delay="100" alt="CreativosPlus">
                     </div>
                 </div>
@@ -589,7 +589,39 @@
                 <div class="heading-block center">
                     <h2>Últimos trabajos web, conoce la calidad de ellos</h2>
                 </div>
-                <div id="image-carousel" class="owl-carousel carousel-widget" data-margin="24" data-nav="true" data-pagi="true" data-items-xs="1" data-items-sm="1" data-items-md="1" data-items-lg="2" data-items-xl="2" style="padding: 0 20px" data-lightbox="gallery">
+                <div id="oc-images" class="d-block d-sm-none owl-carousel image-carousel carousel-widget" data-margin="20" data-nav="true" data-pagi="true" data-items-xs="1" data-items-sm="1">
+                    <div class="oc-item">
+                        <a target="_blank" href="http://www.addictivebeautynow.com">
+                            <img src="images/portafolio/web/addictivebeautyspa.jpg" alt="Image 1">
+                        </a>
+                    </div>
+                    <div class="oc-item">
+                        <a target="_blank" href="http://www.petroleumblg.com">
+                            <img src="images/portafolio/web/blg.jpg" alt="Image 2">
+                        </a>
+                    </div>
+                    <div class="oc-item">
+                        <a target="_blank" href="http://www.drycleaningontherun.com">
+                            <img src="images/portafolio/web/drycleaning.jpg" alt="Image 3">
+                        </a>
+                    </div>
+                    <div class="oc-item">
+                        <a target="_blank" href="http://www.jjcustomsolution.com">
+                            <img src="images/portafolio/web/jjsolutions.jpg" alt="Image 4">
+                        </a>
+                    </div>
+                    <div class="oc-item">
+                        <a target="_blank" href="http://www.serviplotca.com">
+                            <img src="images/portafolio/web/serviplotca.jpg" alt="Image 5">
+                        </a>
+                    </div>
+                    <div class="oc-item">
+                        <a target="_blank" href="https://weare-yourfriends.com">
+                            <img src="images/portafolio/web/wayf.jpg" alt="Image 6">
+                        </a>
+                    </div>
+                </div>
+                <div id="image-carousel" class="d-none d-lg-block owl-carousel carousel-widget" data-margin="24" data-nav="true" data-pagi="true" data-items-xs="1" data-items-sm="1" data-items-md="1" data-items-lg="2" data-items-xl="2" style="padding: 0 20px" data-lightbox="gallery">
                     <div class="slide slide--1">
                         <div class="carousel-column-container">
                             <ul class="carousel-column column-1">
@@ -746,7 +778,7 @@
                                         <input type="text" class="form-control" id="asunto" name="asunto" placeholder="Cotizaciones, soporte, inquietudes">
                                     </div>
                                 </div>
-                                <button type="button" id="puto" class="button btn-verde button-3d button-reveal button-large tright button-rounded" style="margin-left: -1px;">
+                                <button type="button" id="puto" class="d-sm-block d-none button btn-verde button-3d button-reveal button-large tright button-rounded" style="margin-left: -1px;">
                                     <i class="icon-line-arrow-right"></i>
                                     <span>Enviar</span>
                                 </button>
@@ -758,9 +790,12 @@
                                 <label class="texto-blanco" for="mensaje">Mensaje (*)</label>
                                 <textarea class="form-control" id="mensaje" name="mensaje" rows="7" cols="30" placeholder="Escribe tu mensaje"></textarea>
                             </div>
+                            <button type="button" id="puto" class="button btn-verde button-3d button-reveal button-large tright button-rounded" style="margin-left: -1px;">
+                                <i class="icon-line-arrow-right"></i>
+                                <span>Enviar</span>
+                            </button>
                         </div>
                     </div>
-                    <div class="w-100 d-block d-md-block d-lg-none line"></div>
                 </form>
                 <div class="line"></div>
                 <div class="row clearfix">
