--- a/index.html
+++ b/index.html
@@ -790,7 +790,7 @@
                                 <label class="texto-blanco" for="mensaje">Mensaje (*)</label>
                                 <textarea class="form-control" id="mensaje" name="mensaje" rows="7" cols="30" placeholder="Escribe tu mensaje"></textarea>
                             </div>
-                            <button type="button" id="puto" class="button btn-verde button-3d button-reveal button-large tright button-rounded" style="margin-left: -1px;">
+                            <button type="button" id="puto" class="d-block d-sm-none button btn-verde button-3d button-reveal button-large tright button-rounded" style="margin-left: -1px;">
                                 <i class="icon-line-arrow-right"></i>
                                 <span>Enviar</span>
                             </button>
